# liburlcodec

./: .gitignore  Cargo.toml  README.md  cbindgen.toml  test.c
src/: lib.rs  percent_decode.rs
tests/: tests.rs  unicode.rs
