[package]
name = "liburlcodec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
base64 = "0.21.5"

[build-dependencies]
cbindgen = "0.26.0"


[lib]
name = "urlcodec"
crate-type = ["cdylib", "rlib"]